--- a/8.html
+++ b/8.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
     <center>
-        <h1><a id="back">chess organization</a></h1>
+        <h1><a id="back">Chess organization</a></h1>
     </center>
 <ul>
 <li><a href="#a">Home</a></li>
