--- a/6.html
+++ b/6.html
@@ -1,4 +1,4 @@
-<html></html>
+<html>
 <head></head>
 <center>
 <body>
@@ -24,4 +24,6 @@ Konidela Ram Charan[1][2] (born 27 March 1985) is an Indian actor, film producer
 <li><a href="https://upload.wikimedia.org/wikipedia/en/6/61/Naayak_poster.jpg">Nayak img</a></li>
 </ul>
 <marquee>Ram Charan</marquee>
+</html>
+
 
